--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,22 +8,24 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
-# ssl
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-password=password
-#server.ssl.key-store-type=pkcs12
-#server.ssl.key-alias=tomcat
-#server.ssl.key-password=password
-# host
-#server.port=9000
+# TLS
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=roqqio_19!
+#server.ssl.key-store-type=JKS
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-alias=selfsigned
+#server.ssl.key-password=roqqio_19!
+# HOST
+server.port=9000
 server.servlet.contextPath=/3h8ZKS3wn1Xu0dDSzeOGweVe_N4n7PbuOJ0GKzrK3hEj1IS2HkcBC5AKSBLq_uK3tFQaRR8bT5rMfmQAvY192A
-#server.address=http://posupdates.roqqio.com
-# custom
+server.address=0.0.0.0
+# PROFILE
+spring.profiles.active=dev
+# CUSTOM
 custom.ipWhitelist=
 custom.aesSecretKey=VZZmHxZXUSzWQ5SuEMvS
 custom.aesSalt=xW7snxmnVProdyTDNtnJ
 custom.username=ROQQIO
 custom.password=roqqio_2019!
 custom.shutdownPassword=LT6NlkJKAtlzxF2WUcu3
-# profile
-spring.profiles.active=dev
+custom.logDir=logs/
