--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,3 +14,5 @@ custom.aesSalt=xW7snxmnVProdyTDNtnJ
 custom.username=admin
 custom.password=admin
 custom.shutdownPassword=LT6NlkJKAtlzxF2WUcu3
+# profile
+spring.profiles.active=dev
