--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,14 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 # TLS
 #server.ssl.key-store=classpath:keystore.jks
-#server.ssl.key-store-password=roqqio_19!
+#server.ssl.key-store-password=
 #server.ssl.key-store-type=JKS
 #server.ssl.key-store-provider=SUN
 #server.ssl.key-alias=selfsigned
-#server.ssl.key-password=roqqio_19!
+#server.ssl.key-password=
 # HOST
 server.port=9000
-server.servlet.contextPath=/3h8ZKS3wn1Xu0dDSzeOGweVe_N4n7PbuOJ0GKzrK3hEj1IS2HkcBC5AKSBLq_uK3tFQaRR8bT5rMfmQAvY192A
+server.servlet.contextPath=/
 server.address=0.0.0.0
 # PROFILE
 spring.profiles.active=dev
